@startuml security.puml

skinparam classAttributeIconSize 0

package "infra.security" {

    class JwtService {
        generateToken(String) : String
        extractEmail(String) : String
        isTokenValid(String) : boolean
    }

}

package "config" {

    class JwtAuthFilter {
        jwtService : JwtService
        userDetailsService : UserDetailsService
    }

    class SecurityConfig {
        filterChain(HttpSecurity)
    }

    class PasswordConfig {
        passwordEncoder() : PasswordEncoder
    }

}

JwtAuthFilter --> JwtService
SecurityConfig --> JwtAuthFilter

@enduml